--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!-- mysql数据库配置 end -->
+
+        <!-- 解析html  -->
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.36.0</version>
+        </dependency>
     </dependencies>
 
     <build>
