--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
             <artifactId>htmlunit</artifactId>
             <version>2.36.0</version>
         </dependency>
+
+        <!--极光推送-->
+        <dependency>
+            <groupId>cn.jpush.api</groupId>
+            <artifactId>jpush-client</artifactId>
+            <version>3.2.9</version>
+        </dependency>
     </dependencies>
 
     <build>
