--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,6 @@ mybatis:
   #configuration:
   #  log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+push:
+  appkey: b6501a07d9ea15aed6169107
+  secret: 326240cbd1afb2cf7e696853
