Auto stash before merge of "master" and "origin/master"
111111111111

--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>jpush-client</artifactId>
             <version>3.2.9</version>
         </dependency>
+
+        <!-- Use 'netty-all' for 4.0 or above -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.29.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
