--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,18 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.29.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.7.3</version>
+        </dependency>
     </dependencies>
 
     <build>
