--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
             <version>1.4</version>
         </dependency>
         <!--发送邮件-->
+
+        <!--JEDIS-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
     <build>
