--- a/pom.xml
+++ b/pom.xml
@@ -165,11 +165,11 @@
             <version>1.3.5</version>
         </dependency>
         <!--服务端-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.java-websocket</groupId>
             <artifactId>Java-Websocket</artifactId>
             <version>1.3.8</version>
-        </dependency>
+        </dependency>-->
 
         <!--springboot底层帮我们自动配置了websokcet，引入maven依赖-->
         <dependency>
@@ -199,6 +199,37 @@
             <artifactId>logback-core</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+
+        <!--bcrypt-->
+        <!--<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <!--bcrypt-->
+
+
+        <!--<dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.5.0</version>
+        </dependency>-->
+
+        <!--mqtt-->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <!--mqtt-->
     </dependencies>
 
     <build>
