--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
             <version>1.1.1</version>
         </dependency>
         <!--mqtt-->
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
